[package]
name = "synedrion-sgx-rpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
rand = "0.8.5"
synedrion = { git = "https://github.com/entropyxyz/synedrion", branch = "master" }
tokio = { version = "1", features = ["full"] }
k256 = { version = "0.13.2", default-features = false, features = ["serde"] }